# selenium-crawler

./: .gitignore  README.md  lab_details.csv  labs.txt  pyproject.toml  requirements.txt  selenium-crawler.ipynb  selenium.ipynb
